# aoc2020

./: CMakeLists.txt  LICENSE  README.md
01/: CMakeLists.txt  main.cpp
02/: CMakeLists.txt  main.cpp
03/: CMakeLists.txt  main.cpp
04/: CMakeLists.txt  main.cpp  main.js
05/: CMakeLists.txt  main.cpp  main.js
06/: CMakeLists.txt  main.cpp  main.js
07/: CMakeLists.txt  main.cpp  main.js
08/: CMakeLists.txt  main.cpp  main.js
09/: CMakeLists.txt  main.cpp
10/: CMakeLists.txt  main.cpp
11/: CMakeLists.txt  main.js
12/: CMakeLists.txt  main.cpp  main.js
13/: CMakeLists.txt  main.js
14/: CMakeLists.txt  main.cpp
15/: CMakeLists.txt  main.cpp
script/: init-today.sh
